<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sport</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">个人兴趣爱好</string>
    <string name="button1">教师</string>
    <string name="button2">学生</string>
    <string name="button3">家长</string>
    <string name="button4">工作人员</string>
    <string name="text">职位</string>
    <string name="project">项目</string>
    <string name="box1">游泳</string>
    <string name="box2">跳远</string>
    <string name="box3">跑步</string>
    <string name="box4">篮球</string>
    <string name="box5">排球</string>

</resources>
